@startuml
skinparam classAttributeIconSize 0
hide empty members

class Feed {
- title: string
- url: string
- last_refreshed: datetime
- refresh_interval: integer = 60
- public: boolean = false
}

class Item {
- title: text
- description: text
- content: text
- url: text
- uid: string
- published: datetime
}

Feed "1" -- "*" Item

class User {
- name: string
- email: string
}

class Role {
- name: string
}

class Permission {
- name: string
}

User "1" -- "*" Feed
User "*" -- "*" Role
Role "*" -- "*" Permission

class Repository {
- title: string
- description: text
- public: boolean = false
}

class Update {
- title: string
}

class Post {
- title: text
- description: text
- content: text
- link: url
}

User "1" -- "*" Repository : owns
User "*" -- "*" Repository
(User,Repository) . repository_user: subscribes

class repository_user {
- subscribed: datetime
- role: Role = null
}

Repository "1" -- "*" Update
Update "1" -- "*" Post


@enduml
